--- a/index.html
+++ b/index.html
@@ -241,11 +241,8 @@
 													<tbody>
 														<template x-for="d in approval?.docDetails">
 															<tr class="border-b">
-																<td
-																	class="text-sm text-gray-900 font-medium px-6 whitespace-nowrap"
-																	x-text="d.name+':'"
-																></td>
-																<td class="text-sm text-gray-900 px-6 py-2 whitespace-nowrap" x-text="d.value"></td>
+																<td class="text-sm text-gray-900 font-medium px-6" x-text="d.name+':'"></td>
+																<td class="text-sm text-gray-900 px-6 py-2 whitespace-pre-line" x-text="d.value"></td>
 															</tr>
 														</template>
 													</tbody>
