fix: update title to "Online Approval"

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<div class="bg-white relative w-full px-4 py-3 lg:px-12 shadow-md">
 			<div class="container-fluid">
 				<div class="container-fluid flex flex flex-wrap items-center justify-between">
-					<h5 class="font-medium leading-tight mt-0 tracking-wide">Override Approval</h5>
+					<h5 class="font-medium leading-tight mt-0 tracking-wide">Online Approval</h5>
 					<svg class="content-end" viewBox="0 0 500 150" width="70px" xmlns="http://www.w3.org/2000/svg">
 						<g data-name="Layer 2">
 							<g data-name="Layer 1" fill="rgba(128,0,128, 0.6)">
@@ -147,7 +147,7 @@
 									>
 									</span>
 									<br />
-									<span class="mt-4 hidden md:block">Request for Override Approval</span>
+									<span class="mt-4 hidden md:block">Request for Approval</span>
 								</h1>
 							</div>
 							<!-- company name header End -->
